@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.83 2004/09/13 14:27:07 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.84 2004/09/16 05:53:50 zhen Exp $
+
+  16 Sep 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py,
+  +targets/livecd-stage2/unmerge.sh:
+  bug #59681 resolved thanks to the patch from viric@vicerveza.homeunix.net!
+  Also, livecd-stage2 unmerge.sh added back in.
 
   13 Sep 2004; John Davis <zhen@gentoo.org> catalyst,
   livecd/runscript-support/livecdfs-update.sh:
